--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class = "light-theme">
+  <body class="light-theme">
     <!-- create a div with class name experience -->
     <div class="experience">
       <!-- create a canvas element inside div with class name experience-canvas -->
@@ -23,6 +23,8 @@
         </div>
       </div>
     </div>
+
+    <div class="div">Original Idea: Bokoko33</div>
 
     <!-- implement smooth scrolling by wrapping "page" allowing it to remain static while "page-wrapper" moves making it look like it's scrolling -->
     <div class="page">
