Updated HTML text and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -85,12 +85,33 @@
             </div>
 
           <div class="section-detail-wrapper">
+            <h3 class="section-heading">Hi! I'm Jarry (Jar-e) </h3>
+            <p class="section-text">This is a little side project I made using Blender and Three.js.
+                                    I started this project as a way to improve my tech skills and create a tangible place for my work to live.
+                                    It's been really fun and I'm looking forward to putting a lot more stuff on here as I continue to learn new things!
+                                    <br><br>
+                                    Design has always been a secret passion of mine (It's fun to see people's faces light up when they see something cool) and
+                                    I'm currently studying business at Western University's Ivey School of Business (Mustangs!!), which is also really cool.
+                                    I've been really interested in the intersection between business and tech and love to make things that people will remember.
+            </p>
+            <h3 class="section-heading">Some less boring stuff</h3>
+            <p class="section-text">Amongst my friends, I've built up a bit of a reputation as a couch surfer, but that's just because I love being around people
+                                    and I end up staying just a little too late (I'm very thankful they aren't tired of me yet). 
+                                    <br><br>
+                                    When I'm not on a couch, you can usually find me brushing up on my mixology with a few cocktails or entertaining friends with 
+                                    some magic tricks (I've found they work best after the cocktails). As a Canadian, I've picked up the obligatory snowboarding and 
+                                    skiing, but since there are barely any slopes in London, I've also caught the climbing bug (bouldering!!!). Aside from that, I like 
+                                    to dabble in a few video games with Valorant taking up a large portion of that dabbling. 
+                                    <br><br>
+                                    If you're still interested in learning more about me, keep scrolling!(If not I still recommend scrolling to the bottom to appreciate 
+                                    the cool mini platform animation I put at the end).
+            </p>
             <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
-            <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
-            <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                    Corporis.
+            </p>
           </div>
         </section>
 
@@ -117,11 +138,23 @@
 
         <div class="section-detail-wrapper">
           <h3 class="section-heading">Lorem Ipsum</h3>
-          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                  Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                  sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                  Corporis.
+          </p>
           <h3 class="section-heading">Lorem Ipsum</h3>
-          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                  Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                  sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                  Corporis.
+          </p>
           <h3 class="section-heading">Lorem Ipsum</h3>
-          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                  Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                  sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                  Corporis.
+          </p>
         </div>
       </section>
 
@@ -148,11 +181,23 @@
 
           <div class="section-detail-wrapper">
             <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                    Corporis.
+            </p>
             <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                    Corporis.
+            </p>
             <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. Corporis.</p>
+            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
+                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
+                                    Corporis.
+            </p>
           </div>
         </section>
 
