More text and css changes

--- a/index.html
+++ b/index.html
@@ -85,32 +85,25 @@
             </div>
 
           <div class="section-detail-wrapper">
-            <h3 class="section-heading">Hi! I'm Jarry (Jar-e) </h3>
-            <p class="section-text">This is a little side project I made using Blender and Three.js.
-                                    I started this project as a way to improve my tech skills and create a tangible place for my work to live.
+            <h3 class="section-heading">Hi! 👋 I'm Jarry (Jar-e) </h3>
+            <p class="section-text">This is a little side project I made as a way of improving my tech skills and create a tangible place for my work to live.
                                     It's been really fun and I'm looking forward to putting a lot more stuff on here as I continue to learn new things!
                                     <br><br>
                                     Design has always been a secret passion of mine (It's fun to see people's faces light up when they see something cool) and
                                     I'm currently studying business at Western University's Ivey School of Business (Mustangs!!), which is also really cool.
                                     I've been really interested in the intersection between business and tech and love to make things that people will remember.
             </p>
-            <h3 class="section-heading">Some less boring stuff</h3>
+            <h3 class="section-heading">🎉Some less boring stuff🎉</h3>
             <p class="section-text">Amongst my friends, I've built up a bit of a reputation as a couch surfer, but that's just because I love being around people
                                     and I end up staying just a little too late (I'm very thankful they aren't tired of me yet). 
                                     <br><br>
-                                    When I'm not on a couch, you can usually find me brushing up on my mixology with a few cocktails or entertaining friends with 
+                                    When I'm not on a couch, you can sometimes find me brushing up on my mixology with a few cocktails or entertaining friends with 
                                     some magic tricks (I've found they work best after the cocktails). As a Canadian, I've picked up the obligatory snowboarding and 
                                     skiing, but since there are barely any slopes in London, I've also caught the climbing bug (bouldering!!!). Aside from that, I like 
                                     to dabble in a few video games with Valorant taking up a large portion of that dabbling. 
                                     <br><br>
                                     If you're still interested in learning more about me, keep scrolling!(If not I still recommend scrolling to the bottom to appreciate 
                                     the cool mini platform animation I put at the end).
-            </p>
-            <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                    Corporis.
             </p>
           </div>
         </section>
@@ -137,23 +130,20 @@
           </div>
 
         <div class="section-detail-wrapper">
-          <h3 class="section-heading">Lorem Ipsum</h3>
-          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                  Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                  sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                  Corporis.
+          <h3 class="section-heading">Portfolio website</h3>
+          <p class="section-text">I made the room and fish animation on Blender, and all the website controls, scrolling animations, and lighting were done through
+                                  gsap and three.js. Also that smooth scrolling effect you're feeling is thanks to a tool called Lenis Scroll. It was definitely a
+                                  learning experience setting thatup but it is very rewarding to have implemented so I hope you like it!
           </p>
-          <h3 class="section-heading">Lorem Ipsum</h3>
-          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                  Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                  sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                  Corporis.
+          <h3 class="section-heading">Generative AI NPC</h3>
+          <p class="section-text">This is going to be my next project. I think it would be really cool to make an NPC with some minor Blender animations and make it
+                                  possible to speak in a really human way (like ChatGPT) through generative ai. I'll put it here so instead of giant blocks of text, you
+                                  can learn about my work by actually playing around with it.
           </p>
-          <h3 class="section-heading">Lorem Ipsum</h3>
-          <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                  Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                  sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                  Corporis.
+          <h3 class="section-heading">Anything else?</h3>
+          <p class="section-text">If you have any examples of cool projects or ideas you think I should look into let me know! I love learning new things and building out
+                                  cool projects to show others. I have just started learning though so it will take some time, but I'll be working hard to go from amateur
+                                  to workplace qualified.
           </p>
         </div>
       </section>
@@ -180,23 +170,23 @@
             </div>
 
           <div class="section-detail-wrapper">
-            <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                    Corporis.
+            <h3 class="section-heading"><a href="https://www.instagram.com/jarry.wu_/" target="_blank">Instagram: jarrywu_</a></h3>
+            <p class="section-text">I don't post much but when I do, I like to post highlights with friends.
+                                    I've also allocated all of my meme discovery to Instagram. I've successfully
+                                    avoided the TikTok and Reddit rabbit holes but I've gotta find my memes somehow.
+                                    Check it out, drop a follow! Who knows, maybe I'll finally have a new post up.
             </p>
-            <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                    Corporis.
+            <h3 class="section-heading"><a href="https://www.linkedin.com/in/jarry-wu-a91049177/" target="_blank">LinkedIn: Jarry Wu</a></h3>
+            <p class="section-text">Obligatory Linkedin plug because I am a business student. If you want to set up
+                                    a coffee chat or reach out to me this is the best place to do it (unless I know you personally,
+                                    then just call or something). I don't have premium so you won't have to worry about me knowing 
+                                    you're looking me up.
             </p>
-            <h3 class="section-heading">Lorem Ipsum</h3>
-            <p class="section-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Saepe mollitia repellendus, nulla cupiditate id ratione eaque culpa quibusdam, 
-                                    sed labore aspernatur laudantium laboriosam exercitationem ut blanditiis suscipit ipsam dolores. 
-                                    Corporis.
+            <h3 class="section-heading"><a href="mailto:jarrywucanada@gmail.com">Email</a></h3>
+            <p class="section-text">If I'm not getting through on LinkedIn then you can always get to me through email.
+                                    For whatever reason, I check my gmail more often than I do any of my other emails so this
+                                    is your best bet if I've ghosted you on LinkedIn. (PSA to all scammers: please don't, 
+                                    I like this email).
             </p>
           </div>
         </section>
