Changed some text

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <p class="section-text">This is a little side project I made as a way of improving my tech skills and create a tangible place for my work to live.
                                     It's been really fun and I'm looking forward to putting a lot more stuff on here as I continue to learn new things!
                                     <br><br>
-                                    Design has always been a secret passion of mine (It's fun to see people's faces light up when they see something cool) and
-                                    I'm currently studying business at Western University's Ivey School of Business (Mustangs!!), which is also really cool.
+                                    I'm currently studying business at Western University's Ivey School of Business (Mustangs!!), which is really fun, and
+                                    design has always been a secret passion of mine (It's fun to see people's faces light up when they see something cool)
                                     I've been really interested in the intersection between business and tech and love to make things that people will remember.
             </p>
             <h3 class="section-heading">🎉Some less boring stuff🎉</h3>
