More text changes

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
           </p>
           <h3 class="section-heading">Generative AI NPC</h3>
           <p class="section-text">This is going to be my next project. I think it would be really cool to make an NPC with some minor Blender animations and make it
-                                  possible to speak in a really human way (like ChatGPT) through generative ai. I'll put it here so instead of giant blocks of text, you
+                                  possible to speak in a really human way (like ChatGPT) through generative AI. I'll put it here so instead of giant blocks of text, you
                                   can learn about my work by actually playing around with it.
           </p>
           <h3 class="section-heading">Anything else?</h3>
-          <p class="section-text">If you have any examples of cool projects or ideas you think I should look into let me know! I love learning new things and building out
+          <p class="section-text">If you have any examples of cool projects or ideas you think I should look into, let me know! I love learning new things and building out
                                   cool projects to show others. I have just started learning though so it will take some time, but I'll be working hard to go from amateur
-                                  to workplace qualified.
+                                  to expert.
           </p>
         </div>
       </section>
@@ -172,8 +172,8 @@
           <div class="section-detail-wrapper">
             <h3 class="section-heading"><a href="https://www.instagram.com/jarry.wu_/" target="_blank">Instagram: jarrywu_</a></h3>
             <p class="section-text">I don't post much but when I do, I like to post highlights with friends.
-                                    I've also allocated all of my meme discovery to Instagram. I've successfully
-                                    avoided the TikTok and Reddit rabbit holes but I've gotta find my memes somehow.
+                                    I've also allocated all of my meme discovery to Instagram since I've successfully
+                                    avoided the TikTok and Reddit rabbit holes (I've gotta find my memes somehow).
                                     Check it out, drop a follow! Who knows, maybe I'll finally have a new post up.
             </p>
             <h3 class="section-heading"><a href="https://www.linkedin.com/in/jarry-wu-a91049177/" target="_blank">LinkedIn: Jarry Wu</a></h3>
@@ -183,7 +183,7 @@
                                     you're looking me up.
             </p>
             <h3 class="section-heading"><a href="mailto:jarrywucanada@gmail.com">Email</a></h3>
-            <p class="section-text">If I'm not getting through on LinkedIn then you can always get to me through email.
+            <p class="section-text">If you're not getting through on LinkedIn then you can always send me an email.
                                     For whatever reason, I check my gmail more often than I do any of my other emails so this
                                     is your best bet if I've ghosted you on LinkedIn. (PSA to all scammers: please don't, 
                                     I like this email).
