--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@
             <p class="section-text">This is a little side project I made as a way of improving my tech skills and create a tangible place for my work to live.
                                     It's been really fun and I'm looking forward to putting a lot more stuff on here as I continue to learn new things!
                                     <br><br>
-                                    I'm currently studying business at Western University's Ivey School of Business (Mustangs!!), which is really fun, and
-                                    design has always been a secret passion of mine (It's fun to see people's faces light up when they see something cool)
-                                    I've been really interested in the intersection between business and tech and love to make things that people will remember.
+                                    I'm currently studying business at Western University's Ivey School of Business (Mustangs!!), and design has always been a 
+                                    secret passion of mine (It's fun to see people's faces light up when they see something cool). I've been really interested 
+                                    in the intersection between business and tech and love to make things that people will remember.
             </p>
-            <h3 class="section-heading">🎉Some less boring stuff🎉</h3>
+            <h3 class="section-heading">🎉 Some less boring stuff 🎉</h3>
             <p class="section-text">Amongst my friends, I've built up a bit of a reputation as a couch surfer, but that's just because I love being around people
                                     and I end up staying just a little too late (I'm very thankful they aren't tired of me yet). 
                                     <br><br>
                                     When I'm not on a couch, you can sometimes find me brushing up on my mixology with a few cocktails or entertaining friends with 
                                     some magic tricks (I've found they work best after the cocktails). As a Canadian, I've picked up the obligatory snowboarding and 
                                     skiing, but since there are barely any slopes in London, I've also caught the climbing bug (bouldering!!!). Aside from that, I like 
-                                    to dabble in a few video games with Valorant taking up a large portion of that dabbling. 
+                                    to dabble in a few video games, namely Valorant. 
                                     <br><br>
-                                    If you're still interested in learning more about me, keep scrolling!(If not I still recommend scrolling to the bottom to appreciate 
+                                    If you're still interested in learning more about me, keep scrolling! (If not I still recommend scrolling to the bottom to appreciate 
                                     the cool mini platform animation I put at the end).
             </p>
           </div>
@@ -133,12 +133,12 @@
           <h3 class="section-heading">Portfolio website</h3>
           <p class="section-text">I made the room and fish animation on Blender, and all the website controls, scrolling animations, and lighting were done through
                                   gsap and three.js. Also that smooth scrolling effect you're feeling is thanks to a tool called Lenis Scroll. It was definitely a
-                                  learning experience setting thatup but it is very rewarding to have implemented so I hope you like it!
+                                  learning experience setting that up but it is very rewarding to have implemented so I hope you like it!
           </p>
           <h3 class="section-heading">Generative AI NPC</h3>
-          <p class="section-text">This is going to be my next project. I think it would be really cool to make an NPC with some minor Blender animations and make it
-                                  possible to speak in a really human way (like ChatGPT) through generative AI. I'll put it here so instead of giant blocks of text, you
-                                  can learn about my work by actually playing around with it.
+          <p class="section-text">This is going to be my next project. I think it would be really cool to make an NPC (non-playable character) with some minor Blender
+                                  animations and make it possible to speak in a really human way (like ChatGPT) through generative AI. I'll put it here when I'm done 
+                                  so instead of giant blocks of text, you can learn about my work by actually playing around with it.
           </p>
           <h3 class="section-heading">Anything else?</h3>
           <p class="section-text">If you have any examples of cool projects or ideas you think I should look into, let me know! I love learning new things and building out
