--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         // If the input is not empty, send the input to the server
         try {
 
-          const response = await fetch("http://104.197.149.157/api/bartender", {
+          const response = await fetch("https://jarry-portfolio-backend-i7masbf3dq-uc.a.run.app/api/bartender", {
             method: "POST",
             body: JSON.stringify({
               "userInput": input
